src/test/deca/context/valid/provided/test09.deca
class A {
    int fatagh(){
        
    }
    boolean equals(A a){
        if(this == a){
            return true;
        }
        return false;
    }
}