src/test/deca/context/invalid/provided/returntype_void.deca
class A {
 int x;
 void setX(int x) {return x;}
}
